[package]
name = "market_data_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
url = "2.1.0"
