[package]
authors = ["Jason McGuiness <coder@chussar.me.uk>"]
categories = ["command-line-utilities", "finance", "web-programming::websocket"]
description = "A very simple market-data server that receives via web sockets and publishes via gRPC."
documentation = "https://github.com/yand-jmg/market_data_server_rust"
homepage = "https://github.com/yand-jmg/market_data_server_rust"
keywords = ["market data", "server", "web sockets", "gRPC"]
license = "GNU Lesser General Public License v2.1"
name = "market_data_server_rust"
readme = "README.md"
repository = "https://github.com/yand-jmg/market_data_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
simple_logger = "4.2.0"
tungstenite = { version= "0.14.0", features = ["rustls-tls"]}
url = "2.1.0"
